# poetry-dependency-public-test

./: README.md  pyproject.toml
.github/: dependabot.yml
poetry_dependency_public_test/: main.py
