[tool.poetry]
name = "poetry-dependency-public-test"
version = "0.1.0"
description = "A test of the github dependency-graph feature for poetry package manager."
authors = ["Benjamin Smedberg <bsmedberg@xometry.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
httplib2 = "0.18.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
